src/Base/main/default/objects/AWS_S3_Object__c/AWS_S3_Object__c.object-meta.xml
<CustomObject>
    <description>Represents a bucket and object name as it exists on Amazon S3</description>
    <label>AWS S3 Object</label>
    <nameField>
        <displayFormat>AWS-{0000}</displayFormat>
        <label>AWS S3 Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWS S3 Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>