src/Base/main/default/objects/AWS_S3_Object__c/fields/AWS_Link__c.field-meta.xml
<CustomField>
    <fullName>AWS_Link__c</fullName>
    <formula>HYPERLINK(&#39;https://s3.amazonaws.com/&#39;&amp;  Bucket_Name__c  &amp;&#39;/&#39;&amp; AWS_Key__c  , 
&#39;https://s3.amazonaws.com/&#39; &amp; Bucket_Name__c  &amp;&#39;/&#39;&amp;  AWS_Key__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AWS Link</label>
    <type>Text</type>
</CustomField>