src/Base/main/default/objects/AWS_S3_Object__c/fields/AWS_Link_Text__c.field-meta.xml
<CustomField>
    <fullName>AWS_Link_Text__c</fullName>
    <formula>&quot;https://s3.amazonaws.com/&quot; +  Bucket_Name__c + &quot;/&quot; +  AWS_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AWS Link Text</label>
    <type>Text</type>
</CustomField>