src/Base/main/default/objects/AWS_S3_Object__c/fields/Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Name__c</fullName>
    <label>Bucket Name</label>
    <length>122</length>
    <type>Text</type>
</CustomField>