src/Base/main/default/objects/AWS_S3_Object__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>image/gif</fullName>
            </value>
            <value>
                <fullName>image/jpeg</fullName>
            </value>
            <value>
                <fullName>image/png</fullName>
            </value>
            <value>
                <fullName>text/html</fullName>
            </value>
            <value>
                <fullName>text/plain</fullName>
            </value>
            <value>
                <fullName>gif</fullName>
            </value>
            <value>
                <fullName>pdf</fullName>
            </value>
            <value>
                <fullName>jpg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>