src/Base/main/default/objects/AWS_S3_Object__c/fields/Image_Height__c.field-meta.xml
<CustomField>
    <fullName>Image_Height__c</fullName>
    <label>Image Height</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>