src/Base/main/default/objects/AWS_S3_Object__c/fields/URL_1280w__c.field-meta.xml
<CustomField>
    <fullName>URL_1280w__c</fullName>
    <formula>&#39;https://s3.amazonaws.com/&#39; +  Bucket_Name__c  + &#39;/&#39; + Path__c + &#39;/1280w/&#39; +  File_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL_1280w</label>
    <type>Text</type>
</CustomField>