src/Base/main/default/objects/AWS_S3_Object__c/fields/UrlLarge__c.field-meta.xml
<CustomField>
    <fullName>UrlLarge__c</fullName>
    <formula>&#39;https://s3.amazonaws.com/&#39; +  Bucket_Name__c  + &#39;/&#39; + Path__c + &#39;/large/&#39; +  File_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UrlLarge</label>
    <type>Text</type>
</CustomField>